--- a/hello-world1/pom.xml
+++ b/hello-world1/pom.xml
@@ -9,7 +9,7 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 </parent>
 
 <groupId>ru.gurzhiy</groupId>
-<artifactId>hello-world</artifactId>
+<artifactId>hello-world1</artifactId>
 <version>1.0-SNAPSHOT</version>
 <name>hello-world</name>
 
