--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
     <module>core</module>
           
     
-    <module>hello-world</module>
+    <module>hello-world1</module>
       
   </modules>
   
